attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743777441200.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[  6%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/RLIntIn file included from /home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:1:
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/RLInterpreter.h:34:10: error: ‘void ai_language::RLInterpreter::interpret()’ marked ‘override’, but does not override
   34 |     void interpret() override;
      |          ^~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:430:6: error: no declaration matches ‘void ai_language::RLInterpreter::handleCreateEnvironmentCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
  430 | void RLInterpreter::handleCreateEnvironmentCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:430:6: note: no functions named ‘void ai_language::RLInterpreter::handleCreateEnvironmentCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/RLInterpreter.h:19:7: note: ‘class ai_language::RLInterpreter’ defined here
   19 | class RLInterpreter : public BaseInterpreter {
      |       ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:438:6: error: no declaration matches ‘void ai_language::RLInterpreter::handleSetEnvironmentParameterCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
  438 | void RLInterpreter::handleSetEnvironmentParameterCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:438:6: note: no functions named ‘void ai_language::RLInterpreter::handleSetEnvironmentParameterCommand(const std::vector<std::__cxx11::basic_string<char> >&)’
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/RLInterpreter.h:19:7: note: ‘class ai_language::RLInterpreter’ defined here
   19 | class RLInterpreter : public BaseInterpreter {
      |       ^~~~~~~~~~~~~
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:118: CMakeFiles/ai_language_lib.dir/src/interpreters/RLInterpreter.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:88: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2